Ajustes de refactoring y demás
