# models/experiencia_laboral.go
@@ -8,6 +8,7 @@ import (
 	"time"
 
 	"github.com/astaxie/beego/orm"
+	"github.com/udistrital/utils_oas/time_bogota"
 )
 
 type ExperienciaLaboral struct {
@@ -20,7 +21,8 @@ type ExperienciaLaboral struct {
 	TipoDedicacion    *TipoDedicacion  `orm:"column(tipo_dedicacion);rel(fk)"`
 	Cargo             *Cargo           `orm:"column(cargo);rel(fk)"`
 	TipoVinculacion   *TipoVinculacion `orm:"column(tipo_vinculacion);rel(fk)"`
-	FechaModificacion  string          `orm:"column(fecha_modificacion);null"`
+	FechaCreacion     string           `orm:"column(fecha_creacion);null"`
+	FechaModificacion string           `orm:"column(fecha_modificacion);null"`
 }
 
 func (t *ExperienciaLaboral) TableName() string {
@@ -34,9 +36,8 @@ func init() {
 // AddExperienciaLaboral insert a new ExperienciaLaboral into database and returns
 // last inserted Id on success.
 func AddExperienciaLaboral(m *ExperienciaLaboral) (id int64, err error) {
-	var t time.Time
-	t = time.Now()
-	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
+	m.FechaCreacion = time_bogota.TiempoBogotaFormato()
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
@@ -136,9 +137,7 @@ func GetAllExperienciaLaboral(query map[string]string, fields []string, sortby [
 func UpdateExperienciaLaboralById(m *ExperienciaLaboral) (err error) {
 	o := orm.NewOrm()
 	v := ExperienciaLaboral{Id: m.Id}
-	var t time.Time
-	t = time.Now()
-	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
